--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">BrokerFi</string>
-    <string name="welcome_text">Welcome to Broker Wallet</string>
+    <string name="welcome_text">Welcome to BrokerChain Wallet</string>
     <string name="create_wallet">Create a Wallet</string>
     <string name="import_wallet">Import existing wallet</string>
     <string name="import_existing_wallet">Import existing wallet?</string>
